Fix Sonarqube reliability issues.